# altman

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: app_common.cpp  app_common.h  main.cpp  main_common.cpp  main_common.h  main_macos.mm  main_windows.cpp  ui.cpp  ui.h  version.h
src/assets/fonts/: embedded_fa_solid.h  embedded_rubik.h
src/assets/images/: AltMan.icns
src/components/: backup.cpp  context_menus.cpp  context_menus.h  data.cpp  data.h  menu.cpp
src/components/accounts/: accounts_context_menu.cpp  accounts_join_ui.cpp  accounts_join_ui.h  accounts_tab.cpp
src/components/avatar/: inventory_tab.cpp
src/components/console/: console.h  console_tab.cpp
src/components/friends/: friends_actions.cpp  friends_tab.cpp
src/components/games/: games_tab.cpp  games_utils.cpp
src/components/history/: history_tab.cpp  history_utils.cpp  log_parser.cpp  log_types.h
src/components/servers/: servers_tab.cpp  servers_utils.cpp
src/components/settings/: settings_tab.cpp
src/network/: client_manager.cpp  client_manager_macos.cpp  client_manager_macos.h  http.cpp  http.h  ipa_installer_macos.cpp  ipa_installer_macos.h
src/network/roblox/: auth.cpp  auth.h  common.cpp  common.h  games.cpp  games.h  hba.cpp  hba.h  session.cpp  session.h  social.cpp  social.h
src/system/: auto_updater.cpp  auto_updater.h  client_update_checker.cpp  client_update_checker_macos.cpp  multi_instance.cpp  multi_instance.h  roblox_launcher.cpp  roblox_launcher.h  system_info.cpp  system_info.h
src/ui/: ui.cpp  ui.h
src/ui/webview/: webview.h  webview_macos.mm  webview_windows.cpp
src/ui/widgets/: context_menus.cpp  context_menus.h  image.h  modal_popup.cpp  modal_popup.h  notifications.cpp  notifications.h
src/ui/windows/: menu.cpp
src/ui/windows/accounts/: accounts_context_menu.cpp  accounts_join_ui.cpp  accounts_join_ui.h  accounts_tab.cpp
src/ui/windows/avatar/: inventory_tab.cpp
src/ui/windows/backup/: backup.cpp  backup.h
src/ui/windows/console/: console_tab.cpp
src/ui/windows/friends/: friends_actions.cpp  friends_tab.cpp
src/ui/windows/games/: games_tab.cpp
src/ui/windows/history/: history_tab.cpp
src/ui/windows/servers/: servers_tab.cpp
src/ui/windows/settings/: settings_tab.cpp
src/utils/: shutdown_manager.h  thread_task.h  worker_thread.h
src/utils/core/: account_utils.cpp  account_utils.h  app_state.h  base64.cpp  base64.h  logging.hpp  status.cpp  status.h  time_utils.cpp  time_utils.h
src/utils/network/: client_manager.cpp  client_manager.h  http.cpp  http.h  http.hpp  ipa_installer.cpp  ipa_installer.h
src/utils/network/roblox/: auth.cpp  auth.h  common.cpp  common.h  games.cpp  games.h  session.cpp  session.h  social.cpp  social.h
src/utils/system/: auto_updater.cpp  auto_updater.h  client_update_checker.cpp  client_update_checker.h  launcher.hpp  multi_instance.cpp  multi_instance.h  roblox_control.cpp  roblox_control.h  roblox_launcher.cpp  roblox_launcher.h  update_client_checker.h
src/utils/ui/: image.h  modal_popup.cpp  modal_popup.h  notifications.cpp  notifications.h  webview.h  webview_macos.mm  webview_windows.cpp
